syntax="proto3";
package lms.v1beta1;
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package="x/lms/types";
service Msg {
    // RegisterAdmin adds a new admin
    rpc MsgRegisterAdmin(RegisterAdminRequest) returns (RegisterAdminResponse){};
    
    // AddStudent adds new student
    rpc MsgAddStudent(AddStudentRequest) returns (AddStudentResponse){};
    
    // ApplyLeave request a new leave
    rpc MsgApplyLeave(ApplyLeaveRequest) returns (ApplyLeaveResponse){};
    
    // AcceptLeave accept or reject a leave
    rpc MsgAcceptLeave(AcceptLeaveRequest) returns (AcceptLeaveResponse){};
    //rpc Leave(LeaveRequest) returns (LeaveResponse){};
}

message RegisterAdminRequest {
    // address is the account address of the admin.
    string Address = 1;
    
    // name is the admin name
    string Name = 2;
}

message RegisterAdminResponse{}

message AddStudentRequest {
    // admin is the account address of the admin
    string admin = 1;
    string Address=2;
    string Id=3;
    string Name=4;
    
    // students is the list of Student.
    //repeated Student students = 2;
}

message AddStudentResponse{}

message ApplyLeaveRequest {
    
    string address = 1;
    
    string reason = 2;
    
    google.protobuf.Timestamp from = 3 [(gogoproto.stdtime)=true];
    
    google.protobuf.Timestamp to = 4 [(gogoproto.stdtime)=true];
}

message ApplyLeaveResponse {

}

enum LeaveStatus {
    STATUS_UNDEFINED = 0;
    
    STATUS_ACCEPTED = 1;
    
    STATUS_REJECTED = 2;
}

message AcceptLeaveRequest {

    string admin = 1;
    
    uint64 leave_id = 2;
    
    LeaveStatus status = 3;
}

message AcceptLeaveResponse {

}

message Student {
    // address is the account address of the student.
    string address = 1;
    
    // name is the student name.
    string name = 2;
    
    // id is a unique student id.
    string id = 3;
}
message Admin{
    string address=1;
    string name=2;
    string id=3;
}
message Leave{
    string date=1;
    string reason=2;
    string name=3;
}